--- a/src/components/Header/index.module.less
+++ b/src/components/Header/index.module.less
@@ -25,8 +25,26 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    img {
-        height: 16px;
-        width: 16px;
+    column-gap: 24px;
+    button {
+        display: flex;
+        width: 34px;
+        height: 100%;
+        padding: 0 6px;
+        margin-left: 4px;
+        cursor: pointer;
+        background-color: transparent;
+        border: none;
+        outline: none;
+        align-items: center;
+    }
+
+    button > svg {
+        color: #666;
+    }
+
+    button.theme > svg {
+        width: 18px;
+        height: 18px;
     }
 }
