--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,9 @@
     margin: 0;
     padding: 0;
 }
-html,
 body,
+html,
 #root {
-    width: 100%;
-}
-.container {
-    display: flex;
+    height: 100%;
     width: 100%;
 }
